TRIMUI SMART Refined.

--- a/handheld/trimui-smart/lcd_reverse.htm
+++ b/handheld/trimui-smart/lcd_reverse.htm
@@ -68,7 +68,7 @@ LCD腳位
 <tr><th>PIN 6</th><td>VSYNC</td></tr>
 <tr><th>PIN 7</th><td>HSYNC</td></tr>
 <tr><th>PIN 8</th><td>3.3V</td></tr>
-<tr><th>PIN 9</th><td>DE</td></tr>
+<tr><th>PIN 9</th><td>CLK</td></tr>
 <tr><th>PIN 10</th><td>SPI_SDA</td></tr>
 <tr><th>PIN 11</th><td>GND</td></tr>
 <tr><th>PIN 12</th><td>3.3V</td></tr>
@@ -167,6 +167,39 @@ SPI初始化資料<br>
 0x012F
 0x0029
 </pre><br>
+
+<p>
+接著使用LED點燈方式，依序把對應腳位找出來<br>
+<img src="lcd_reverse/5.jpg" class="maxSize"><br><br>
+
+LCD腳位
+</p>
+<table>
+<tr><th>PIN 1</th><td>3.3V</td><td></td></tr>
+<tr><th>PIN 2</th><td>GND</td><td></td></tr>
+<tr><th>PIN 3</th><td>RESET</td><td>PD0</td></tr>
+<tr><th>PIN 4</th><td>SPI_CS</td><td>PD10</td></tr>
+<tr><th>PIN 5</th><td>SPI_CLK</td><td>PD11</td></tr>
+<tr><th>PIN 6</th><td>VSYNC</td><td>PD21</td></tr>
+<tr><th>PIN 7</th><td>HSYNC</td><td>PD20</td></tr>
+<tr><th>PIN 8</th><td>3.3V</td><td></td></tr>
+<tr><th>PIN 9</th><td>CLK</td><td>P18</td></tr>
+<tr><th>PIN 10</th><td>SPI_SDA</td><td>P12</td></tr>
+<tr><th>PIN 11</th><td>GND</td> <td></td></tr>
+<tr><th>PIN 12</th><td>3.3V</td><td></td></tr>
+<tr><th>PIN 13</th><td>D0</td><td>PD3</td></tr>
+<tr><th>PIN 14</th><td>D1</td><td>PD4</td></tr>
+<tr><th>PIN 15</th><td>D2</td><td>PD5</td></tr>
+<tr><th>PIN 16</th><td>D3</td><td>PD6</td></tr>
+<tr><th>PIN 17</th><td>D4</td><td>PD7</td></tr>
+<tr><th>PIN 18</th><td>D5</td><td>PD8</td></tr>
+<tr><th>PIN 19</th><td>GND</td><td></td></tr>
+<tr><th>PIN 20</th><td>GND</td><td></td></tr>
+<tr><th>PIN 21</th><td>GND</td><td></td></tr>
+<tr><th>PIN 22</th><td>GND</td><td></td></tr>
+<tr><th>PIN 23</th><td>GND</td><td></td></tr>
+<tr><th>PIN 24</th><td>3.3V</td><td></td></tr>
+</table><br>
 
 <p>
 <br><a href="../../handheld.htm">返回上一頁</a>
