--- a/handheld/trimui-smart/pinout.htm
+++ b/handheld/trimui-smart/pinout.htm
@@ -68,6 +68,19 @@
 <tr><td>LED (Blue)</td><td>PG11</td></tr>
 <tr><td>LED (Green)</td><td>PG12</td></tr>
 <tr><td>LCD BL</td><td>PB4(PWM0)</td></tr>
+<tr><td>LCD RST</td><td>PD0</td></tr>
+<tr><td>LCD SPI_CS</td><td>PD10</td></tr>
+<tr><td>LCD SPI_CLK</td><td>PD11</td></tr>
+<tr><td>LCD SPI_SDA</td><td>PD12</td></tr>
+<tr><td>LCD CLK</td><td>PD18</td></tr>
+<tr><td>LCD HSYNC</td><td>PD20</td></tr>
+<tr><td>LCD VSYNC</td><td>PD21</td></tr>
+<tr><td>LCD D0</td><td>PD3</td></tr>
+<tr><td>LCD D1</td><td>PD4</td></tr>
+<tr><td>LCD D2</td><td>PD5</td></tr>
+<tr><td>LCD D3</td><td>PD6</td></tr>
+<tr><td>LCD D4</td><td>PD7</td></tr>
+<tr><td>LCD D5</td><td>PD8</td></tr>
 </table><br>
 
 <p>
