TRIMUI SMART Refined.

--- a/handheld/trimui-smart/teardown.htm
+++ b/handheld/trimui-smart/teardown.htm
@@ -109,7 +109,10 @@ LTK8002D、RTL8723DS<br>
 <img src="teardown/20.jpg" class="maxSize"><br><br>
 
 振動馬達～<br>
-<img src="teardown/21.jpg" class="maxSize">
+<img src="teardown/21.jpg" class="maxSize"><br><br>
+
+LTK8002D<br>
+<img src="teardown/22.jpg" class="maxSize">
 </p>
 
 <p>
