TRIMUI SMART Refined.

--- a/handheld/trimui-smart/pinout.htm
+++ b/handheld/trimui-smart/pinout.htm
@@ -81,6 +81,8 @@
 <tr><td>LCD D3</td><td>PD6</td></tr>
 <tr><td>LCD D4</td><td>PD7</td></tr>
 <tr><td>LCD D5</td><td>PD8</td></tr>
+<tr><td>MOTOR</td><td>PD19</td></tr>
+<tr><td>AUDIO ENBALE</td><td>PE16</td></tr>
 </table><br>
 
 <p>
