Sipeed M1s Dock Added boot mode image.

--- a/mcu.htm
+++ b/mcu.htm
@@ -3339,6 +3339,10 @@ Register</a><br>
 &lowast;
 <a href="mcu/m1s-dock/sch.htm">
 電路圖</a><br>
+
+&lowast;
+<a href="mcu/m1s-dock/bootmode.htm">
+Boot mode</a><br>
 <br><br><br><br>
 
 <div id="ox64"></div>
