Sipeed M1s Dock How to prepare development environment.

--- a/mcu.htm
+++ b/mcu.htm
@@ -3347,6 +3347,13 @@ Register</a><br>
 &lowast;
 <a href="mcu/m1s-dock/bootmode.htm">
 Boot mode</a><br>
+
+&oplus;
+<b>Assembly</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="mcu/m1s-dock/asm_setup.htm">
+    開發環境</a><br>
 <br><br><br><br>
 
 <div id="ox64"></div>
