Sipeed M1s Dock How to blink LED in assembly.

--- a/mcu.htm
+++ b/mcu.htm
@@ -3354,6 +3354,10 @@ Boot mode</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="mcu/m1s-dock/asm_setup.htm">
     開發環境</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="mcu/m1s-dock/asm_led.htm">
+    LED</a><br>
 <br><br><br><br>
 
 <div id="ox64"></div>
