Sipeed M1s Dock How to get button value in assembly.

--- a/mcu.htm
+++ b/mcu.htm
@@ -3358,6 +3358,10 @@ Boot mode</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="mcu/m1s-dock/asm_led.htm">
     LED</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="mcu/m1s-dock/asm_button.htm">
+    Button</a><br>
 <br><br><br><br>
 
 <div id="ox64"></div>
