MASM32 How to create customized font.

--- a/program.htm
+++ b/program.htm
@@ -691,6 +691,10 @@ Set ScrollBar</a><br>
     Create Pen</a><br>
     
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/masm32/font.htm">
+    Create Font</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/masm32/line.htm">
     Draw Line</a><br>
     
