F133 Added gen_checksum.py file.

--- a/mcu.htm
+++ b/mcu.htm
@@ -3400,6 +3400,10 @@ Boot mode</a><br>
 &lowast;
 <a href="mcu/f133/sch.htm">
 電路圖</a><br>
+
+&lowast;
+<a href="mcu/f133/gen_checksum.htm">
+gen_checksum.py</a><br>
 <br><br><br><br>
 
 <div id="gd32vf103"></div>
