F133 How to prepare development environment.

--- a/mcu.htm
+++ b/mcu.htm
@@ -3408,6 +3408,13 @@ Boot mode</a><br>
 &lowast;
 <a href="mcu/f133/gen_checksum.htm">
 gen_checksum.py</a><br>
+
+&oplus;
+<b>Assembly</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="mcu/f133/asm_setup.htm">
+    開發環境</a><br>
 <br><br><br><br>
 
 <div id="gd32vf103"></div>
