--- a/mcu/f133/asm_led.htm
+++ b/mcu/f133/asm_led.htm
@@ -129,8 +129,8 @@ Makefile
 </p>
 <pre>
 all:
-	riscv64-unknown-linux-gnu-gcc -o main.o main.s -nostdlib -march=rv32imafcpzpsfoperand_xtheade -mabi=ilp32f -mtune=e907
-	riscv64-unknown-linux-gnu-ld -T main.ld -o main.elf main.o -b elf32-littleriscv
+	riscv64-unknown-linux-gnu-as -o main.o main.s
+	riscv64-unknown-linux-gnu-ld -T main.ld -o main.elf main.o
 	riscv64-unknown-linux-gnu-objcopy -O binary main.elf tmp.bin
 	python3 gen_checksum.py tmp.bin main.bin
 
@@ -143,9 +143,8 @@ clean:
 </p>
 <pre>
 $ make
-    riscv64-unknown-linux-gnu-gcc -o main.o main.s -nostdlib -march=rv32imafcpzpsfoperand_xtheade -mabi=ilp32f -mtune=e907
-    riscv64-unknown-linux-gnu-ld -T main.ld -o main.elf main.o -b elf32-littleriscv
-    riscv64-unknown-linux-gnu-ld: Using an executable file (main.o) as input to a link is deprecated - support is likely to be removed in the future
+    riscv64-unknown-linux-gnu-as -o main.o main.s
+    riscv64-unknown-linux-gnu-ld -T main.ld -o main.elf main.o
     riscv64-unknown-linux-gnu-objcopy -O binary main.elf tmp.bin
     python3 gen_checksum.py tmp.bin main.bin
 </pre><br>
