F133 How to get button value in assembly.

--- a/mcu.htm
+++ b/mcu.htm
@@ -3423,6 +3423,10 @@ gen_checksum.py</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="mcu/f133/asm_led.htm">
     LED</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="mcu/f133/asm_button.htm">
+    Button</a><br>
 <br><br><br><br>
 
 <div id="gd32vf103"></div>
