--- a/reverse.htm
+++ b/reverse.htm
@@ -412,17 +412,14 @@ Debug ROM</a><br>
 
 <div id="mame"></div>
 <h3><img src="img/photos/mame.jpg" class="floatLeft"/>
-MAMED</h3>
+MAME</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
-<a href="reverse/mamed/debug.htm">
+<a href="reverse/mame/debug.htm">
 Debug ROM</a><br>
-
-&lowast;
-<a href="reverse/mamed/cmd.htm">
-Debug Command</a><br>
 <br><br><br><br>
+
 </p>
 </div>
 </div>
