--- a/reverse/mame/debug.htm
+++ b/reverse/mame/debug.htm
@@ -44,12 +44,25 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>MAMED</h3>
+<h3>MAME</h3>
 <p><b>Debug ROM</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://docs.mamedev.org/debugger/general.html">debugger</a>
+1. <a href="http://www.emu999.net/info/xsjx/2013/48103.html">emu999</a><br>
+2. <a href="https://sourceforge.net/projects/testinput/files/">sourceforge</a><br><br>
+
+Debian x64
+</p>
+<pre>
+$ sudo apt-get install mame -y
+$ mame kof97.zip -debug -resolution 320x240
+</pre>
+<p>
+<img src="debug/1.jpg" class="maxSize"><br><br>
+
+下方的命令列可以輸入指令，如：bp 34f58<br>
+<img src="debug/2.jpg" class="maxSize">
 </p>
 
 <p>
