HLA How to create customized font.

--- a/program.htm
+++ b/program.htm
@@ -801,6 +801,10 @@ hello, world!</a><br>
         Create Pen</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/hla/win32_font.htm">
+        Create Font</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/hla/win32_line.htm">
         Draw Line</a><br>
 
