--- a/mcu/v3s/asm_setup.htm
+++ b/mcu/v3s/asm_setup.htm
@@ -48,13 +48,13 @@
 <p><b>開發環境</b></p>
 <hr size="1">
 <p>
-司徒的開發環境是Debian 10 x64，使用的編譯工具是GNU GCC，燒錄工具則是使用sunxi-tools，安裝步驟如下：
+司徒使用的開發環境是Debian x64，編譯工具則是使用GNU GCC，燒錄工具使用sunxi-tools：
 </p>
 <pre>
 $ sudo apt-get install gcc-arm* -y
 
 $ cd
-$ wget https://github.com/steward-fu/lichee-nano/releases/download/v1.0/sunxi-tools.7z
+$ wget https://github.com/steward-fu/archives/releases/download/lichee-nano/sunxi-tools.7z
 $ 7zr x sunxi-tools.7z
 $ cd sunxi-tools
 $ make clean
