--- a/mcu/v3s/build_kernel-4.10.15.htm
+++ b/mcu/v3s/build_kernel-4.10.15.htm
@@ -47,6 +47,12 @@
 <h3>(ARM Cortex-A7) V3S (Lichee Pi Zero)</h3>
 <p><b>build kernel 4.10.15</b></p>
 <hr size="1">
+<p>
+參考資訊：<br>
+1. <a href="https://github.com/techping/linux">kernel</a><br><br>
+
+如下：
+</p>
 <pre>
 $ cd
 $ git clone -b licheepi-zero https://github.com/techping/linux kernel
