--- a/mcu/v3s/mmap.htm
+++ b/mcu/v3s/mmap.htm
@@ -48,6 +48,9 @@
 <p><b>Memory Map</b></p>
 <hr size="1">
 <p>
+參考資料：<br>
+1. <a href="https://github.com/steward-fu/pdf/blob/master/v3s/rm.pdf">pdf</a><br><br>
+
 如下：<br>
 <img src="mmap/1.jpg" class="maxSize">
 </p>
