--- a/mcu/v3s/build_sunxi-tools.htm
+++ b/mcu/v3s/build_sunxi-tools.htm
@@ -52,7 +52,7 @@
 </p>
 <pre>
 $ cd
-$ wget https://github.com/steward-fu/lichee-nano/releases/download/v1.0/sunxi-tools.7z
+$ wget https://github.com/steward-fu/archives/releases/download/lichee-nano/sunxi-tools.7z
 $ 7zr x sunxi-tools.7z
 $ cd sunxi-tools
 $ make clean
