--- a/mcu.htm
+++ b/mcu.htm
@@ -2745,6 +2745,10 @@ build kernel 4.10.15</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="mcu/v3s/asm_btn.htm">
     Button</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="mcu/v3s/asm_ccu.htm">
+    CCU</a><br>
 <br><br><br><br>
 
 <div id="nanopi-m1"></div>
