V3S Added uart example in assembly.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2749,6 +2749,10 @@ build kernel 4.10.15</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="mcu/v3s/asm_ccu.htm">
     CCU</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="mcu/v3s/asm_uart.htm">
+    UART</a><br>
 <br><br><br><br>
 
 <div id="nanopi-m1"></div>
