--- a/mcu/v3s/asm_btn.htm
+++ b/mcu/v3s/asm_btn.htm
@@ -48,6 +48,9 @@
 <p><b>Button</b></p>
 <hr size="1">
 <p>
+參考資訊：<br>
+1. <a href="https://github.com/steward-fu/pdf/blob/master/v3s/rm.pdf">pdf</a><br><br>
+
 司徒將按鍵連接到PG4<br>
 <img src="asm_btn/1.jpg" class="maxSize"><br><br>
 
