--- a/mcu/v3s/asm_led.htm
+++ b/mcu/v3s/asm_led.htm
@@ -48,6 +48,9 @@
 <p><b>LED</b></p>
 <hr size="1">
 <p>
+參考資訊：<br>
+1. <a href="https://github.com/steward-fu/pdf/blob/master/v3s/rm.pdf">pdf</a><br><br>
+
 LED接到PG0~PG2<br>
 <img src="asm_led/1.jpg" class="maxSize"><br><br>
 
