FASM How to create customized font.

--- a/program.htm
+++ b/program.htm
@@ -940,6 +940,10 @@ Flat Assembler (FASM)</h3>
             Create Pen</a><br>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/fasm/win32_font.htm">
+            Create Font</a><br>
+
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/fasm/win32_line.htm">
             Draw Line</a><br>
 
