Wine How to use DrawText() API.

--- a/program.htm
+++ b/program.htm
@@ -1084,9 +1084,9 @@ Wine</h3>
             <a href="program/wine/cpp_pie.htm">
             Draw Pie</a><br>
                     
-                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-                <a href="program/wine/cpp_dlg_text.htm">
-                Text</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/wine/cpp_text.htm">
+            Draw Text</a><br>
                     
                 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
                 <a href="program/wine/cpp_dlg_bitblt.htm">
