MinGW How to use DrawText() API.

--- a/program.htm
+++ b/program.htm
@@ -1294,6 +1294,10 @@ MinGW</h3>
             <a href="program/mingw/cpp_pie.htm">
             Draw Pie</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/mingw/cpp_text.htm">
+            Draw Text</a><br>
+
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/mingw/enum_hid.htm">
         Enumerate USB HID</a><br>
