--- a/mcu.htm
+++ b/mcu.htm
@@ -2765,6 +2765,10 @@ build kernel 4.10.15</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="mcu/v3s/asm_timer2.htm">
     Timer2</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="mcu/v3s/asm_watchdog.htm">
+    Watchdog</a><br>
 <br><br><br><br>
 
 <div id="nanopi-m1"></div>
