V3S Added gic example in assembly.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2769,6 +2769,10 @@ build kernel 4.10.15</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="mcu/v3s/asm_watchdog.htm">
     Watchdog</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="mcu/v3s/asm_gic.htm">
+    GIC</a><br>
 <br><br><br><br>
 
 <div id="nanopi-m1"></div>
