--- a/mcu.htm
+++ b/mcu.htm
@@ -2773,6 +2773,10 @@ build kernel 4.10.15</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="mcu/v3s/asm_gic.htm">
     GIC</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="mcu/v3s/asm_hstimer0.htm">
+    HS Timer0</a><br>
 <br><br><br><br>
 
 <div id="nanopi-m1"></div>
