--- a/mcu.htm
+++ b/mcu.htm
@@ -2777,6 +2777,10 @@ build kernel 4.10.15</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="mcu/v3s/asm_hstimer0.htm">
     HS Timer0</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="mcu/v3s/asm_hstimer1.htm">
+    HS Timer1</a><br>
 <br><br><br><br>
 
 <div id="nanopi-m1"></div>
