F1C100S Added schematic image.

--- a/mcu.htm
+++ b/mcu.htm
@@ -1798,6 +1798,10 @@ framebuffer console</a><br>
 開發板</a><br>
 
 &lowast;
+<a href="mcu/f1c100s/sch.htm">
+電路圖</a><br>
+
+&lowast;
 <a href="mcu/f1c100s/mmap.htm">
 記憶體</a><br>
 
