NASM How to draw text.

--- a/program.htm
+++ b/program.htm
@@ -496,6 +496,10 @@ Netwide Assembler (NASM)</h3>
             <a href="program/nasm/win32_pie.htm">
             Draw Pie</a><br>
                     
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32_text.htm">
+            Draw Text</a><br>
+                    
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Win32 API (NASMX)</b><br>
 
