V3S How to build kernel 6.3.5.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2728,6 +2728,10 @@ build uboot</a><br>
 build sunxi-tools</a><br>
 
 &lowast;
+<a href="mcu/v3s/build_kernel-6.3.5.htm">
+build kernel 6.3.5</a><br>
+
+&lowast;
 <a href="mcu/v3s/build_kernel-4.10.15.htm">
 build kernel 4.10.15</a><br>
 
