NASMX Hot to draw text.

--- a/program.htm
+++ b/program.htm
@@ -596,6 +596,10 @@ Netwide Assembler (NASM)</h3>
             <a href="program/nasm/win32x_pie.htm">
             Draw Pie</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32x_text.htm">
+            Draw Text</a><br>
+
 &oplus;
 <b>Assembly (x64)</b><br>
 
