TRIMUI SMART How to boot into fel mode via microsd.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4429,6 +4429,10 @@ UART腳位</a><br>
 找出LCD腳位和初始化步驟</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/brom.htm">
+如何透過MicroSD進入fel模式</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/bootsd.htm">
 如何讓官方系統從MicroSD啟動</a><br>
 
