TRIMUI SMART How to make multi-boot from microsd.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4437,6 +4437,10 @@ UART腳位</a><br>
 如何讓官方系統從MicroSD啟動</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/mboot.htm">
+如何使用MicroSD製作多重開機模式</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/largefile.htm">
 解決無法讀取超過4GB檔案大小的問題</a><br>
 
