--- a/handheld/trimui-smart/brom.htm
+++ b/handheld/trimui-smart/brom.htm
@@ -102,7 +102,7 @@ reset:
     .end
 </pre>
 <p>
-編譯燒錄到MicroSD後，插入開機就會直接進入fel模式，這樣就可以很方便使用xfel下載到RAM執行
+編譯並燒錄到MicroSD後，插入開機就會直接進入fel模式，這樣就可以很方便使用xfel下載到RAM執行
 </p>
 
 <p>
