--- a/driver.htm
+++ b/driver.htm
@@ -226,6 +226,13 @@ Linux Device Driver (LDD)</h3>
         ioctl</a><br>
 
 &oplus;
+<b>Falco</b><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="driver/ldd/falco_build_kernel.htm">
+    build kernel</a><br>
+
+&oplus;
 <b>eBPF</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
