--- a/driver.htm
+++ b/driver.htm
@@ -233,6 +233,10 @@ Linux Device Driver (LDD)</h3>
     install falco</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="driver/ldd/falco_build_ebpf.htm">
+    build ebpf</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/ldd/falco_build_kernel.htm">
     build kernel</a><br>
 
