--- a/driver/ldd/falco_build_pdig.htm
+++ b/driver/ldd/falco_build_pdig.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Linux Device Driver &gt;&gt; Falco</h3>
-<p><b> build kernel</b></p>
+<p><b> build pdig</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -55,22 +55,14 @@
 </p>
 <pre>
 $ cd
-$ git clone https://github.com/falcosecurity/falco
-$ cd falco
-$ mkdir build
+$ git clone https://github.com/falcosecurity/pdig
+$ git clone -b gen-events-falco-engine https://github.com/falcosecurity/libs
+$ cd pdig
+$ mkdir -p build
 $ cd build
-$ cmake ../ \
-      -DBUILD_BPF=OFF \
-      -DBUILD_WARNINGS_AS_ERRORS="OFF" \
-      -DCMAKE_BUILD_TYPE="Release" \
-      -DCMAKE_INSTALL_PREFIX="/usr" \
-      -DFALCO_ETC_DIR="/etc/falco" \
-      -DUSE_BUNDLED_DEPS=ON
-$ make driver
-</pre>
-<p>
-P.S. driver/falco.ko
-</p>
+$ cmake ..
+$ make
+</pre><br>
 
 <p>
 <br><a href="../../driver.htm">返回上一頁</a>
