--- a/driver/ldd/falco_build_libs.htm
+++ b/driver/ldd/falco_build_libs.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Linux Device Driver &gt;&gt; Falco</h3>
-<p><b>build kernel</b></p>
+<p><b>build libscap、libsinsp</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -55,22 +55,12 @@
 </p>
 <pre>
 $ cd
-$ git clone https://github.com/falcosecurity/falco
-$ cd falco
-$ mkdir build
-$ cd build
-$ cmake ../ \
-      -DBUILD_BPF=OFF \
-      -DBUILD_WARNINGS_AS_ERRORS="OFF" \
-      -DCMAKE_BUILD_TYPE="Release" \
-      -DCMAKE_INSTALL_PREFIX="/usr" \
-      -DFALCO_ETC_DIR="/etc/falco" \
-      -DUSE_BUNDLED_DEPS=ON
-$ make driver
-</pre>
-<p>
-P.S. driver/falco.ko
-</p>
+$ git clone https://github.com/falcosecurity/libs
+$ mkdir libs/build
+$ cd libs/build
+$ cmake ..
+$ make
+</pre><br>
 
 <p>
 <br><a href="../../driver.htm">返回上一頁</a>
