TRIMUI SMART Fix __aeabi_idiv0 issue.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4445,6 +4445,10 @@ UART腳位</a><br>
 解決無法讀取超過4GB檔案大小的問題</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/fix_raise.htm">
+解決"undefined reference to raise"問題</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/fix_libgcc.htm">
 解決"undefined reference to __aeabi_idiv"問題</a><br>
 
