F133 Added pinout link.

--- a/mcu.htm
+++ b/mcu.htm
@@ -3446,6 +3446,10 @@ Boot mode</a><br>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="mcu/t113-s3/pin.htm">
+接腳</a><br>
+
+&lowast;
 <a href="mcu/f133/sch.htm">
 電路圖</a><br>
 
