TRIMUI SMART How to build xboot.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4493,6 +4493,10 @@ Memory Map</a><br>
 System Bus</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/build_xboot.htm">
+build xboot</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/unbrick.htm">
 unbrick tool</a><br>
 
