F133 How to build xboot.

--- a/mcu.htm
+++ b/mcu.htm
@@ -3458,6 +3458,10 @@ Boot mode</a><br>
 開發板</a><br>
 
 &lowast;
+<a href="mcu/f133/build_xboot.htm">
+build xboot</a><br>
+
+&lowast;
 <a href="mcu/f133/gen_checksum.htm">
 gen_checksum.py</a><br>
 
