TRIMUI SMART Fix xboot issue.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4453,6 +4453,10 @@ UART腳位</a><br>
 解決"undefined reference to __aeabi_idiv"問題</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/fix_size.htm">
+解決"arm-linux-gnueabihf-size: invalid option -- G"問題</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/iomem.htm">
 /proc/iomem</a><br>
 
