T113-S3 How to build xboot.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2663,6 +2663,10 @@ pinout(dip switch)</a><br>
 mksunxi.c</a><br>
 
 &lowast;
+<a href="mcu/t113-s3/build_xboot.htm">
+build xboot</a><br>
+
+&lowast;
 <a href="mcu/t113-s3/build_awboot.htm">
 build awboot</a><br>
 
