T113-S3 Fix xboot-gt911 interrupt issue.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2678,6 +2678,10 @@ build awboot</a><br>
 <a href="mcu/t113-s3/build_kernel.htm">
 build kernel 6.0.1</a><br>
 
+&lowast;
+<a href="mcu/t113-s3/xboot_int.htm">
+分析XBoot GT911無法觸發中斷的原因</a><br>
+
 &oplus;
 <b>Assembly</b><br>
 
