Arduino Nano How to download program under arduino-ide.

--- a/mcu.htm
+++ b/mcu.htm
@@ -1052,6 +1052,10 @@ ATtiny85電路圖</a><br>
 <a href="mcu/atmega328/sch.htm">
 電路圖</a><br>
 
+&lowast;
+<a href="mcu/atmega328/ide.htm">
+如何在Arduino-IDE下載程式</a><br>
+
 &oplus;
 <b>Arduino</b><br>
 
