MASM32 How to draw text.

--- a/program.htm
+++ b/program.htm
@@ -729,6 +729,10 @@ Set ScrollBar</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/masm32/pie.htm">
     Draw Pie</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/masm32/text.htm">
+    Draw Text</a><br>
 <br><br><br><br>
 
 <div id="hla"></div>
