--- a/driver/ldd/falco_install.htm
+++ b/driver/ldd/falco_install.htm
@@ -55,11 +55,9 @@
 步驟如下：
 </p>
 <pre>
-$ curl -fsSL https://falco.org/repo/falcosecurity-packages.asc
-$ sudo gpg --dearmor -o /usr/share/keyrings/falco-archive-keyring.gpg
-$ sudo cat &gt;&gt;/etc/apt/sources.list.d/falcosecurity.list &lt;&lt;EOF
-deb [signed-by=/usr/share/keyrings/falco-archive-keyring.gpg] https://download.falco.org/packages/deb stable main
-EOF
+$ curl -fsSL https://falco.org/repo/falcosecurity-packages.asc | sudo gpg --dearmor -o /usr/share/keyrings/falco-archive-keyring.gpg
+$ sudo vim /etc/apt/sources.list.d/falcosecurity.list
+    deb [signed-by=/usr/share/keyrings/falco-archive-keyring.gpg] https://download.falco.org/packages/deb stable main
 
 $ sudo apt-get update -y
 $ sudo apt install -y dkms make linux-headers-$(uname -r)
