Gaviar Added review.

--- a/handheld.htm
+++ b/handheld.htm
@@ -74,6 +74,7 @@
 <div id="page">
 <br><br>
 <p>
+    <a href="#gaviar"><img src="img/photos/gaviar.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Gaviar (小志掌機)"/></a>
     <a href="#handmade01"><img src="img/photos/handmade01.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Handmade01 (黑妹01)"/></a>
     <a href="#pandora1"><img src="img/photos/pandora.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Pandora 1GHz"/></a>
     <a href="#pandora2"><img src="img/photos/pandora.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Pandora Rebirth"/></a>
@@ -214,6 +215,16 @@
 <div id="page">
 <br><br>
 <p>
+<div id="gaviar"></div>
+<h3><img src="img/photos/gaviar.jpg" class="floatLeft"/>
+Gaviar (小志掌機)</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="handheld/gaviar/review.htm">
+介紹</a><br>
+<br><br><br><br>
+
 <div id="handmade01"></div>
 <h3><img src="img/photos/handmade01.jpg" class="floatLeft"/>
 Handmade01 (黑妹01)</h3>
