--- a/handheld.htm
+++ b/handheld.htm
@@ -223,6 +223,10 @@ Gaviar (小志掌機)</h3>
 &lowast;
 <a href="handheld/gaviar/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="handheld/gaviar/teardown.htm">
+拆機</a><br>
 <br><br><br><br>
 
 <div id="handmade01"></div>
