Debian How to setup ssh tunnel.

--- a/system.htm
+++ b/system.htm
@@ -113,6 +113,10 @@ PDF轉JPG</a><br>
 time diff</a><br>
 
 &lowast;
+<a href="system/debian/ssh_tunnel.htm">
+SSH Tunnel</a><br>
+
+&lowast;
 <a href="system/debian/mount_cifs.htm">
 掛載cifs檔案</a><br>
 
