Debian How to send file via rsync with ssh tunnel.

--- a/system.htm
+++ b/system.htm
@@ -117,6 +117,10 @@ time diff</a><br>
 SSH Tunnel</a><br>
 
 &lowast;
+<a href="system/debian/ssh_tunnel_rsync.htm">
+SSH Tunnel(rsync)</a><br>
+
+&lowast;
 <a href="system/debian/mount_cifs.htm">
 掛載cifs檔案</a><br>
 
