MAME How to debug kof97 for p2-hit.

--- a/reverse.htm
+++ b/reverse.htm
@@ -418,6 +418,13 @@ MAME</h3>
 &lowast;
 <a href="reverse/mame/debug.htm">
 Debug ROM</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    KOF97<br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="reverse/mame/kof97_p2hit.htm">
+        P2被打的斷點</a><br>
 <br><br><br><br>
 
 </p>
