Gaviar Added schematic image.

--- a/handheld.htm
+++ b/handheld.htm
@@ -227,6 +227,10 @@ Gaviar (小志掌機)</h3>
 &lowast;
 <a href="handheld/gaviar/teardown.htm">
 拆機</a><br>
+
+&lowast;
+<a href="handheld/gaviar/sch.htm">
+電路圖</a><br>
 <br><br><br><br>
 
 <div id="handmade01"></div>
