--- a/handheld.htm
+++ b/handheld.htm
@@ -231,6 +231,10 @@ Gaviar (小志掌機)</h3>
 &lowast;
 <a href="handheld/gaviar/sch.htm">
 電路圖</a><br>
+
+&lowast;
+<a href="handheld/gaviar/sch2.htm">
+電路改進</a><br>
 <br><br><br><br>
 
 <div id="handmade01"></div>
