--- a/reverse/mame/kof97_p2hit.htm
+++ b/reverse/mame/kof97_p2hit.htm
@@ -61,12 +61,17 @@ $ mame kof97.zip -debug -resolution 320x240
 可以設定WatchPoint的地方<br>
 <img src="kof97_p2hit/1.jpg" class="maxSize"><br><br>
 
-按下F11並且輸入<b>wp 0x10843B,1,w</b>，接著再按下F5執行<br>
+<b>wp 0x10843b,1,rw,wpdata>=2</b><br>
 <img src="kof97_p2hit/2.jpg" class="maxSize"><br><br>
 
 P2被攻擊後<br>
-<img src="kof97_p2hit/3.jpg" class="maxSize"><br>
-<img src="kof97_p2hit/4.jpg" class="maxSize">
+<img src="kof97_p2hit/3.jpg" class="maxSize"><br><br>
+
+觸發中斷<br>
+<img src="kof97_p2hit/4.jpg" class="maxSize"><br><br>
+
+<b>ctrl + m</b>可以用來查看記憶體<br>
+<img src="kof97_p2hit/5.jpg" class="maxSize">
 </p>
 
 <p>
