Gaviar How to prepare development environment.

--- a/handheld.htm
+++ b/handheld.htm
@@ -235,6 +235,17 @@ Gaviar (小志掌機)</h3>
 &lowast;
 <a href="handheld/gaviar/sch2.htm">
 電路改進</a><br>
+
+&lowast;
+<a href="mcu/f133/gen_checksum.htm">
+gen_checksum.py</a><br>
+
+&oplus;
+<b>Assembly</b><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/gaviar/asm_setup.htm">
+    安裝環境</a><br>
 <br><br><br><br>
 
 <div id="handmade01"></div>
