Gaviar Added lcd pinout image.

--- a/handheld.htm
+++ b/handheld.htm
@@ -233,6 +233,10 @@ Gaviar (小志掌機)</h3>
 電路圖</a><br>
 
 &lowast;
+<a href="handheld/gaviar/lcd.htm">
+LCD腳位</a><br>
+
+&lowast;
 <a href="handheld/gaviar/sch2.htm">
 電路改進</a><br>
 
