--- a/handheld/gaviar/sch2.htm
+++ b/handheld/gaviar/sch2.htm
@@ -66,7 +66,7 @@ UART是一個相當方便的除錯方式，建議可以保留<br>
 MicroSD訊號沒有上拉電阻，因此，要注意PCB線長<br>
 <img src="sch2/5.jpg" class="maxSize"><br><br>
 
-GPIO都拉到獨立GPIO使用，避免鬼鍵問題<br>
+GPIO都拉到獨立GPIO使用，避免鬼鍵問題，不過，可以使用晶片內部的提昇電阻，這樣可以減少電阻拉線<br>
 <img src="sch2/6.jpg" class="maxSize"><br><br>
 
 背光建議使用IC，避免壓降問題，屏使用RGB-565，建議找有TE(FRAME)的屏，這樣可以有效控制閃屏問題<br>
