Gaviar How to read button value.

--- a/handheld.htm
+++ b/handheld.htm
@@ -254,6 +254,10 @@ gen_checksum.py</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/gaviar/asm_led.htm">
     LED</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/gaviar/asm_btn.htm">
+    Button</a><br>
 <br><br><br><br>
 
 <div id="handmade01"></div>
