Gaviar Added block image.

--- a/handheld.htm
+++ b/handheld.htm
@@ -229,6 +229,10 @@ Gaviar (小志掌機)</h3>
 拆機</a><br>
 
 &lowast;
+<a href="handheld/gaviar/block.htm">
+方塊圖</a><br>
+
+&lowast;
 <a href="handheld/gaviar/sch.htm">
 電路圖</a><br>
 
