Gaviar Added memory map images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -245,6 +245,10 @@ LCD腳位</a><br>
 電路改進</a><br>
 
 &lowast;
+<a href="handheld/gaviar/mmap.htm">
+Memory Map</a><br>
+
+&lowast;
 <a href="mcu/f133/gen_checksum.htm">
 gen_checksum.py</a><br>
 
