Gaviar Added system block image.

--- a/handheld.htm
+++ b/handheld.htm
@@ -233,6 +233,10 @@ Gaviar (小志掌機)</h3>
 方塊圖</a><br>
 
 &lowast;
+<a href="handheld/gaviar/sys.htm">
+系統圖</a><br>
+
+&lowast;
 <a href="handheld/gaviar/sch.htm">
 電路圖</a><br>
 
