--- a/handheld.htm
+++ b/handheld.htm
@@ -270,6 +270,10 @@ gen_checksum.py</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/gaviar/asm_btn.htm">
     Button</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/gaviar/asm_ledc.htm">
+    LEDC</a><br>
 <br><br><br><br>
 
 <div id="handmade01"></div>
