Gaviar How to use timer0.

--- a/handheld.htm
+++ b/handheld.htm
@@ -274,6 +274,10 @@ gen_checksum.py</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/gaviar/asm_ledc.htm">
     LEDC</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/gaviar/asm_timer0.htm">
+    Timer0</a><br>
 <br><br><br><br>
 
 <div id="handmade01"></div>
