--- a/handheld/gaviar/asm_timer0.htm
+++ b/handheld/gaviar/asm_timer0.htm
@@ -53,6 +53,9 @@
 2. <a href="https://en.wikipedia.org/wiki/Delay_slot">Delay_slot</a><br>
 3. <a href="https://github.com/Ouyancheng/FlatHeadBro">FlatHeadBro</a><br><br>
 
+Timer方塊圖<br>
+<img src="asm_timer0/7.jpg" class="maxSize"><br><br>
+
 Timer位址<br>
 <img src="asm_timer0/1.jpg" class="maxSize"><br><br>
 
