--- a/handheld.htm
+++ b/handheld.htm
@@ -278,6 +278,10 @@ gen_checksum.py</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/gaviar/asm_timer0.htm">
     Timer0</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/gaviar/asm_timer1.htm">
+    Timer1</a><br>
 <br><br><br><br>
 
 <div id="handmade01"></div>
