Gaviar How to use watchdog.

--- a/handheld.htm
+++ b/handheld.htm
@@ -282,6 +282,10 @@ gen_checksum.py</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/gaviar/asm_timer1.htm">
     Timer1</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/gaviar/asm_watchdog.htm">
+    Watchdog</a><br>
 <br><br><br><br>
 
 <div id="handmade01"></div>
