--- a/handheld/gaviar/asm_ccu.htm
+++ b/handheld/gaviar/asm_ccu.htm
@@ -93,7 +93,7 @@ main.s
     .equ LEDC_WAIT_TIME1_CTRL_REG,  0x0028
    
     .text
-    .long 0x0a00006f
+    .long 0x4000006f
     .byte 'e','G','O','N','.','B','T','0'
     .long 0x5F0A6C39
     .long 0x8000
@@ -101,11 +101,7 @@ main.s
     .long 0, 0, 0, 0, 0, 0, 0, 0
     .long 0, 0, 0, 0, 0, 0, 0, 0
  
-    .org 0x00a0
-_vector:
-    j _start
-   
-    .org 0x0100
+    .org 0x0400
 _start:
     li t0, (1 &lt;&lt; 31) | (1 &lt;&lt; 30) | (1 &lt;&lt; 29) | (1 &lt;&lt; 27) | (2 &lt;&lt; 24) | (48 &lt;&lt; 8)
     li a0, CCU_BASE + PLL_CPU_CTRL_REG
