--- a/handheld/gaviar/asm_btn.htm
+++ b/handheld/gaviar/asm_btn.htm
@@ -87,7 +87,7 @@ main.s
     .equ _1S,       200000000
    
     .text
-    .long 0x0a00006f
+    .long 0x4000006f
     .byte 'e','G','O','N','.','B','T','0'
     .long 0x5F0A6C39
     .long 0x8000
@@ -95,11 +95,7 @@ main.s
     .long 0, 0, 0, 0, 0, 0, 0, 0
     .long 0, 0, 0, 0, 0, 0, 0, 0
  
-    .org 0x00a0
-_vector:
-    j _start
-   
-    .org 0x0100
+    .org 0x0400
 _start:
     li t0, 0x100000
     li a0, GPIO_BASE + PE_CFG0
