--- a/handheld/gaviar/asm_timer0.htm
+++ b/handheld/gaviar/asm_timer0.htm
@@ -105,7 +105,7 @@ main.s
     .equ LEDC_WAIT_TIME1_CTRL_REG,  0x0028
    
     .text
-    .long 0x0a00006f
+    .long 0x4000006f
     .byte 'e','G','O','N','.','B','T','0'
     .long 0x5F0A6C39
     .long 0x8000
@@ -113,11 +113,7 @@ main.s
     .long 0, 0, 0, 0, 0, 0, 0, 0
     .long 0, 0, 0, 0, 0, 0, 0, 0
  
-    .org 0x00a0
-_vector:
-    j _start
-   
-    .org 0x0100
+    .org 0x0400
 _start:
     li t0, (1 &lt;&lt; 16) | (1 &lt;&lt; 0)
     li a0, CCU_BASE + LEDC_BGR_REG
